# gde2-settings-daemon

./: AUTHORS  COPYING.LIB  Makefile.am  NEWS-MATE  README  autogen.sh  configure.ac
.tx/: config
data/: 50-accessibility.xml.in  Makefile.am  gde2-settings-daemon-uninstalled.pc.in  gde2-settings-daemon.1  gde2-settings-daemon.desktop.in.in  gde2-settings-daemon.pc.in  msd-datetime-mechanism.1  msd-locate-pointer.1  org.gde2.SettingsDaemon.plugins.a11y-keyboard.gschema.xml.in  org.gde2.SettingsDaemon.plugins.a11y-settings.gschema.xml.in  org.gde2.SettingsDaemon.plugins.background.gschema.xml.in  org.gde2.SettingsDaemon.plugins.clipboard.gschema.xml.in  org.gde2.SettingsDaemon.plugins.datetime.gschema.xml.in  org.gde2.SettingsDaemon.plugins.housekeeping.gschema.xml.in  org.gde2.SettingsDaemon.plugins.keybindings.gschema.xml.in  org.gde2.SettingsDaemon.plugins.keyboard.gschema.xml.in  org.gde2.SettingsDaemon.plugins.media-keys.gschema.xml.in  org.gde2.SettingsDaemon.plugins.mouse.gschema.xml.in  org.gde2.SettingsDaemon.plugins.mpris.gschema.xml.in  org.gde2.SettingsDaemon.plugins.smartcard.gschema.xml.in  org.gde2.SettingsDaemon.plugins.sound.gschema.xml.in  org.gde2.SettingsDaemon.plugins.typing-break.gschema.xml.in  org.gde2.SettingsDaemon.plugins.xrandr.gschema.xml.in  org.gde2.SettingsDaemon.plugins.xrdb.gschema.xml.in  org.gde2.SettingsDaemon.plugins.xsettings.gschema.xml.in  org.gde2.SettingsDaemon.service.in  org.gde2.applications-at.gschema.xml.in  org.gde2.font-rendering.gschema.xml.in  org.gde2.peripherals-smartcard.gschema.xml.in  org.gde2.peripherals-touchpad.gschema.xml.in
gde2-settings-daemon/: Makefile.am  gde2-settings-manager.c  gde2-settings-manager.h  gde2-settings-manager.xml  gde2-settings-module.c  gde2-settings-module.h  gde2-settings-plugin-info.c  gde2-settings-plugin-info.h  gde2-settings-plugin.c  gde2-settings-plugin.h  gde2-settings-profile.c  gde2-settings-profile.h  main.c
plugins/a11y-keyboard/: Makefile.am  a11y-keyboard.gde2-settings-plugin.in  msd-a11y-keyboard-manager.c  msd-a11y-keyboard-plugin.c  msd-a11y-keyboard-plugin.h  msd-a11y-preferences-dialog.c  test-a11y-preferences-dialog.c
plugins/a11y-settings/: Makefile.am  a11y-settings.gde2-settings-plugin.in  msd-a11y-settings-manager.c  msd-a11y-settings-plugin.c  msd-a11y-settings-plugin.h
plugins/background/: Makefile.am  background.gde2-settings-plugin.in  msd-background-manager.c  msd-background-plugin.c  msd-background-plugin.h  test-background.c
plugins/clipboard/: Makefile.am  clipboard.gde2-settings-plugin.in  msd-clipboard-manager.c  msd-clipboard-plugin.c  msd-clipboard-plugin.h
plugins/common/: msd-keygrab.c  msd-osd-window.c  msd-osd-window.h
plugins/datetime/: Makefile.am  msd-datetime-mechanism-main.c  msd-datetime-mechanism.c  msd-datetime-mechanism.xml  org.gde2.SettingsDaemon.DateTimeMechanism.conf  org.gde2.SettingsDaemon.DateTimeMechanism.service.in  org.gde2.settingsdaemon.datetimemechanism.policy.in
plugins/dummy/: Makefile.am  dummy.gde2-settings-plugin.in  msd-dummy-manager.c  msd-dummy-plugin.c  msd-dummy-plugin.h
plugins/housekeeping/: Makefile.am  housekeeping.gde2-settings-plugin.in  msd-disk-space.c  msd-housekeeping-manager.c  msd-housekeeping-plugin.c  msd-housekeeping-plugin.h  msd-ldsm-dialog.c  msd-ldsm-trash-empty.c
plugins/keybindings/: Makefile.am  keybindings.gde2-settings-plugin.in  msd-keybindings-manager.c  msd-keybindings-plugin.c  msd-keybindings-plugin.h
plugins/keyboard/: Makefile.am  keyboard.gde2-settings-plugin.in  msd-keyboard-manager.c  msd-keyboard-plugin.c  msd-keyboard-plugin.h  msd-keyboard-xkb.c  msd-keyboard-xkb.h
plugins/media-keys/: Makefile.am  acme.h  media-keys.gde2-settings-plugin.in  msd-media-keys-manager.c  msd-media-keys-manager.xml  msd-media-keys-plugin.c  msd-media-keys-plugin.h  test-media-keys.c  test-media-window.c
plugins/mouse/: Makefile.am  mouse.gde2-settings-plugin.in  msd-mouse-manager.c  msd-mouse-plugin.c  msd-mouse-plugin.h
plugins/mpris/: Makefile.am  mpris.gde2-settings-plugin.in  msd-mpris-manager.c  msd-mpris-plugin.c  msd-mpris-plugin.h
plugins/smartcard/: Makefile.am  msd-smartcard-plugin.c  msd-smartcard-plugin.h  smartcard.gde2-settings-plugin.in
plugins/sound/: Makefile.am  msd-sound-manager.c  msd-sound-plugin.c  msd-sound-plugin.h  sound.gde2-settings-plugin.in
plugins/typing-break/: Makefile.am  msd-typing-break-manager.c  msd-typing-break-plugin.c  msd-typing-break-plugin.h  typing-break.gde2-settings-plugin.in
plugins/xrandr/: Makefile.am  msd-xrandr-manager.c  msd-xrandr-manager.xml  msd-xrandr-plugin.c  msd-xrandr-plugin.h  xrandr.gde2-settings-plugin.in
plugins/xrdb/: Makefile.am  msd-xrdb-manager.c  msd-xrdb-plugin.c  msd-xrdb-plugin.h  xrdb.gde2-settings-plugin.in
plugins/xsettings/: Makefile.am  msd-xsettings-manager.c  msd-xsettings-manager.h  msd-xsettings-plugin.c  msd-xsettings-plugin.h  xsettings.gde2-settings-plugin.in
po/: ChangeLog  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  es_CO.po  et.po  eu.po  fa.po  fi.po  fr.po  frp.po  ga.po  gl.po  gnome-copyrights.txt  gu.po  (+61 more)
